k8s/community-service/002-Deployment-sapoon-community-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapoon-community-service
  labels:
    app: sapoon-community-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sapoon-community-service
      version: v1
  template:
    metadata:
      labels:
        app: sapoon-community-service
        version: v1
    spec:
      serviceAccountName: account-sapoon-community
      containers:
      - name: sapoon-community
        image: gcr.io/sapoon/sapoon-community:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
