k8s/community-service/003-Service-sapoon-community-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sapoon-community
  labels:
    app: sapoon-community
    service: sapoon-community
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: sapoon-community
