k8s/community-service/004-Gateway-sapoon-community-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sapoon-community-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
